Footer picture upside down, Fixed overflow and margin issues

--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,15 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 3rem; }
+  padding: 3rem;
+  overflow-x: hidden; }
   @media only screen and (max-width: 56.25em) {
     body {
       padding: 0; } }
 
 ::selection {
-  background-color: blue;
-  color: yellow; }
+  background-color: #4B90E2;
+  color: #FFDA60; }
 
 body {
   font-family: "Lato", sans-serif;
@@ -88,7 +89,7 @@ p {
 .button {
   display: inline-block;
   height: 4rem;
-  background-color: red;
+  background-color: #F64061;
   border-radius: 2rem; }
   .button__text {
     margin-top: .3rem;
@@ -122,6 +123,7 @@ p {
   left: 13rem; }
 
 .imgcomp {
+  overflow-x: visible;
   position: relative;
   width: 35%;
   display: table-cell; }
@@ -160,7 +162,7 @@ p {
   .imgcomp__circle3 {
     width: 48rem;
     height: 48rem;
-    background-color: yellow;
+    background-color: #FFDA60;
     border-radius: 50%;
     position: absolute; }
     .imgcomp__circle3--left {
@@ -169,14 +171,15 @@ p {
       right: -18rem; }
 
 .composition {
-  width: 100vw;
+  overflow-x: visible;
+  width: calc(100vw - $body-padding);
   margin-top: 10rem;
   margin-bottom: 10rem;
   position: relative; }
   .composition__hexagon {
     width: 34rem; }
     .composition__hexagon--left {
-      margin-left: 20rem; }
+      margin-left: 17rem; }
     .composition__hexagon--middle {
       margin: 0 2rem 2rem 2rem; }
   .composition__backgroundelement {
@@ -185,28 +188,28 @@ p {
   .composition__blue--big {
     width: 50rem;
     height: 50rem;
-    background-color: blue;
+    background-color: #4B90E2;
     border-radius: 50%;
     left: -14rem;
     top: -4rem; }
   .composition__blue--small {
     width: 9rem;
     height: 9rem;
-    background-color: blue;
+    background-color: #4B90E2;
     border-radius: 50%;
     left: 40rem;
     top: 30rem; }
   .composition__yellow--big {
     width: 24rem;
     height: 24rem;
-    background-color: yellow;
+    background-color: #FFDA60;
     border-radius: 50%;
     left: 61rem;
     top: -5rem; }
   .composition__yellow--small {
     width: 9rem;
     height: 9rem;
-    background-color: yellow;
+    background-color: #FFDA60;
     border-radius: 50%;
     left: 62rem;
     top: 30rem; }
@@ -221,14 +224,14 @@ p {
   .composition__green--big {
     width: 30rem;
     height: 30rem;
-    background-color: lightgreen;
+    background-color: #B8E986;
     border-radius: 50%;
     left: 121rem;
     top: 8rem; }
   .composition__green--small {
     width: 9rem;
     height: 9rem;
-    background-color: lightgreen;
+    background-color: #B8E986;
     border-radius: 50%;
     left: 99rem;
     top: 2rem; }
@@ -236,7 +239,7 @@ p {
 .yellowdot {
   width: 2rem;
   height: 2rem;
-  background-color: yellow;
+  background-color: #FFDA60;
   border-radius: 50%;
   margin: 3.5rem 0;
   margin-left: 80rem; }
@@ -295,7 +298,10 @@ p {
     margin-top: 10rem; }
     .footer__container--skyline {
       width: 100%;
-      margin-bottom: 1rem; }
+      margin-bottom: 1rem;
+      transform: rotate(180deg) scaleX(-1);
+      -ms-filter: FlipH;
+      filter: FlipH; }
     .footer__container--heading {
       transform: translateX(45%);
       margin-top: 3rem;
@@ -360,7 +366,7 @@ p {
     margin-top: 1rem; }
 
 .navbar {
-  width: 100vw;
+  width: calc(100vw - $body-padding);
   height: 3rem;
   display: block;
   margin-top: 2rem;
