--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,5 +1,6 @@
 // VIER KLEINE COMPOSITIES
 .imgcomp {
+    overflow-x: visible;
     position: relative;
     width: 35%;
     display: table-cell;
@@ -67,7 +68,8 @@
 //GROTE COMPOSITIE
 
 .composition {
-    width: 100vw;
+    overflow-x: visible;
+    width: calc(100vw - $body-padding);
     //height: $big-circle;            //ff tijdelijk?
     margin-top: 10rem;
     margin-bottom: 10rem;
@@ -77,7 +79,7 @@
         width: 34rem;
 
         &--left {
-            margin-left: 20rem;
+            margin-left: 17rem;
         }
 
         &--middle {
