--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -13,7 +13,7 @@
 
 
 .navbar {
-    width: 100vw;
+    width: calc(100vw - $body-padding);
     height: 3rem;
     display: block;
     margin-top: 2rem;
